--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -17,3 +17,9 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+@media (min-width: 1200px) {
+  .pokemon-list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
